update TCC 1 text to match the new propose

--- a/capa.tex
+++ b/capa.tex
@@ -1,10 +1,10 @@
-\titulo{Análise do Algoritmo de Cardume de Peixes em Problemas Dinâmicos com Domínio Contínuo}
+\titulo{Análise do Algoritmo de Clãs de Enxame de Partículas em Problemas Dinâmicos com Domínio Contínuo}
 \autor{Rafael Henrique Vincence}
 \nome{Rafael Henrique}
 \ultimonome{Vincence}
 
 \bacharelado \curso{Ciência da Computação}
-\ano{2016}
+\ano{2017}
 \data {\today}
 \cidade{Joinville}
 
@@ -13,7 +13,7 @@
 \unidadeacademica{Centro de Ciências Tecnológicas}
 
 \orientador{Profº Rafael Stubs Parpinelli}
-\examinadorum{Profº Guilherme Koslovski}
+\examinadorum{Profº Cláudio César de Sá}
 \examinadordois{Profº Chidambaram Chidambaram}
 
 \ttorientador{$ $}
@@ -25,8 +25,15 @@
 
 \maketitle
 
-%\begin{dedicatoria}
-%\noindent
+\resumo{Dedicatória}
+Agradeço, em especial, aos meus pais, Volney e Maria Janete, que sempre se esforçaram para que eu pudesse ter uma boa educação, sempre me apoiaram ao seguir o meu próprio caminho e assim chegar até aqui. Agradeço
+pelo apoio e também pela cobrança que recebi durante toda minha vida.
+
+Agradeço ao meu orientador, Rafael Parpinelli, que desde o começo
+acreditou em mim e me deu todo o suporte necessário, mesmo nos muitos momentos difíceis que tivemos ao logo desse trabalho.
+
+Agradeço aos amigos e colegas pelo apoio e a todos que de alguma forma
+contribuíram para este trabalho fosse realizado, em especial aqueles que me ajudaram com momentos de descontração e incentivo para nunca desistir.
 %\end{dedicatoria}
 %\noindent
 %\newpage
@@ -41,9 +48,15 @@
 
 \resumo{Resumo}
 
-A maioria dos desafios encontrados na vida real são problemas complexos com uma grande gama de variáveis e por vezes dinâmico. Sendo assim, cada vez mais tem-se a necessidade da criação de meta-heurísticas para solucionar problemas com estas características. A Natureza, por sua vez, resolve instintivamente esses tipos de problemas e por esse motivo algoritmos bioinspirados têm sido amplamente utilizados na resolução de problemas dinâmicos com domínio contínuo. Os aspectos e as interações de uma colônia de animais são pontos relevantes na otimização desses problemas, como o comportamento individual e comunitário, que contribuem em problemas de larga escala e não estacionários. Neste trabalho o foco é a análise e aplicação do algoritmo de cardume de peixes (\textit{Fish School Search}, FSS) em \textit{benchmarks} dinâmicos de domínio contínuo.
+A maioria dos desafios encontrados na vida real são problemas complexos com uma grande gama de variáveis e por vezes dinâmico. Sendo assim, cada vez mais tem-se a necessidade da criação de meta heurísticas para solucionar problemas com estas características. A Natureza, por sua vez, resolve instintivamente esses tipos de problemas e por esse motivo algoritmos bioinspirados têm sido amplamente utilizados na resolução de problemas dinâmicos com domínio contínuo. Os aspectos e as interações de uma colônia de animais são pontos relevantes na otimização desses problemas, como o comportamento individual e comunitário, que contribuem em problemas de larga escala e não estacionários. Neste trabalho o foco é a análise e aplicação do algoritmo de otimização por exame de partículas (\textit{Particle Swarm Optimization}) em \textit{benchmarks} dinâmicos de domínio contínuo.
 
-\noindent \textbf{Palavras-chave:} \textit{Inteligência de enxames}, \textit{Algoritmos bioinspirados}, \textit{Problemas dinâmicos com domínio contínuo}, \textit{Fish School Search}.
+\noindent \textbf{Palavras-chave:} \textit{Inteligência de enxames}, \textit{Algoritmos bioinspirados}, \textit{Problemas dinâmicos com domínio contínuo}, \textit{Particle Swarm Optimization}.
+
+\resumo{Abstract}
+
+A maioria dos desafios encontrados na vida real são problemas complexos com uma grande gama de variáveis e por vezes dinâmico. Sendo assim, cada vez mais tem-se a necessidade da criação de meta heurísticas para solucionar problemas com estas características. A Natureza, por sua vez, resolve instintivamente esses tipos de problemas e por esse motivo algoritmos bioinspirados têm sido amplamente utilizados na resolução de problemas dinâmicos com domínio contínuo. Os aspectos e as interações de uma colônia de animais são pontos relevantes na otimização desses problemas, como o comportamento individual e comunitário, que contribuem em problemas de larga escala e não estacionários. Neste trabalho o foco é a análise e aplicação do algoritmo de otimização por exame de partículas (\textit{Particle Swarm Optimization}) em \textit{benchmarks} dinâmicos de domínio contínuo.
+
+\noindent \textbf{Key-Words:} \textit{Swarm Inteligence}, \textit{Bioinspired Algorithms}, \textit{dynamic problems with continuous domain}, \textit{Particle Swarm Optimization}.
 
 \tableofcontents
 \listoffigures
