--- a/preamble.tex
+++ b/preamble.tex
@@ -19,6 +19,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[section]{placeins}
 \usepackage{graphicx}
+\usepackage[]{algorithm2e}
 
 
 % pacotes de fontes! doi ter que usar times para evitar problemas :(
