--- a/refs.bib
+++ b/refs.bib
@@ -247,6 +247,46 @@
   publisher={Springer}
 }
 
+@article{ferreira2009clan,
+	title={Clan particle swarm optimization},
+	author={Ferreira de Carvalho, Danilo and Jos{\'e} Albanez Bastos-Filho, Carmelo},
+	journal={International Journal of Intelligent Computing and Cybernetics},
+	volume={2},
+	number={2},
+	pages={197--227},
+	year={2009},
+	publisher={Emerald Group Publishing Limited}
+}
+
+@inproceedings{pasupuleti2006gregarious,
+	title={The gregarious particle swarm optimizer (G-PSO)},
+	author={Pasupuleti, Srinivas and Battiti, Roberto},
+	booktitle={Proceedings of the 8th annual conference on Genetic and evolutionary computation},
+	pages={67--74},
+	year={2006},
+	organization={ACM}
+}
+
+@article{clerc2002particle,
+	title={The particle swarm-explosion, stability, and convergence in a multidimensional complex space},
+	author={Clerc, Maurice and Kennedy, James},
+	journal={IEEE transactions on Evolutionary Computation},
+	volume={6},
+	number={1},
+	pages={58--73},
+	year={2002},
+	publisher={IEEE}
+}
+
+@article{offlineError,
+	title={Designing evolutionary algorithms for dynamic optimization problems},
+	author={Branke, J{\"u}rgen and Schmeck, Hartmut},
+	journal={Advances in evolutionary computing},
+	pages={239--262},
+	year={2003},
+	publisher={Springer}
+}
+
 %problemas
 @article{li2008benchmark,
   title={Benchmark generator for CEC 2009 competition on dynamic optimization},
