--- a/symbols.tex
+++ b/symbols.tex
@@ -10,12 +10,14 @@
 	\addsymbol FA {\textit{Firefly Algorithm}}
 	\addsymbol FSS {\textit{Fishing School Shearch}}
 	\addsymbol MP {\textit{Moving Peaks}}
-	\addsymbol OA {Operador de Alimentação}
-	\addsymbol OMCI {Operador de Movimentação Coletiva Instintiva}
-	\addsymbol OMI {Operador de Movimentação Individual}
-	\addsymbol OMVC {Operador de Movimentação Volátil Coletiva}
 	\addsymbol OP {\textit{Ocillating Peaks}}
+	\addsymbol OFFE {\textit{Offline Error}}
 	\addsymbol PSO {\textit{Particle Swarm Optimization}}
+	\addsymbol CPSO {\textit{Clan Particle Swarm Optimization}}
+	\addsymbol DCPSO {\textit{Dynamic Clan Particle Swarm Optimization}}
+	\addsymbol ClPSO {\textit{Clustering Particle Swarm Optimizer}}
+	\addsymbol VPSO {\textit{Volitive Particle Swarm Optimizer}}
+	\addsymbol DSPSO {\textit{Dynamic Species-Based Particle Swarm Optimizer}}
 	\addsymbol SDE {\textit{Species-based Diferencial Evolution}}
 	\addsymbol ShDE {\textit{Sharing-based Diferencial Evolution}}
 	\addsymbol SI {\textit{Swarm Inteligence}}
