update first part

--- a/capa.tex
+++ b/capa.tex
@@ -1,4 +1,4 @@
-\titulo{Análise do Algoritmo de Clãs de Enxame de Partículas em Problemas Dinâmicos com Domínio Contínuo}
+\titulo{Análise do Algoritmo de Otimização por Enxame de Partículas em Clãs em Problemas Dinâmicos com Domínio Contínuo}
 \autor{Rafael Henrique Vincence}
 \nome{Rafael Henrique}
 \ultimonome{Vincence}
@@ -13,7 +13,7 @@
 \unidadeacademica{Centro de Ciências Tecnológicas}
 
 \orientador{Profº Rafael Stubs Parpinelli}
-\examinadorum{Profº Cláudio César de Sá}
+\examinadorum{Profº Claudio Cesar de Sá}
 \examinadordois{Profº Chidambaram Chidambaram}
 
 \ttorientador{$ $}
@@ -50,7 +50,7 @@ contribuíram para este trabalho fosse realizado, em especial aqueles que me aju
 
 A maioria dos desafios encontrados na vida real são problemas complexos com uma grande gama de variáveis e por vezes dinâmico. Sendo assim, cada vez mais tem-se a necessidade da criação de meta heurísticas para solucionar problemas com estas características. A Natureza, por sua vez, resolve instintivamente esses tipos de problemas e por esse motivo algoritmos bioinspirados têm sido amplamente utilizados na resolução de problemas dinâmicos com domínio contínuo. Os aspectos e as interações de uma colônia de animais são pontos relevantes na otimização desses problemas, como o comportamento individual e comunitário, que contribuem em problemas de larga escala e não estacionários. Neste trabalho o foco é a análise e aplicação do algoritmo de otimização por exame de partículas (\textit{Particle Swarm Optimization}) em \textit{benchmarks} dinâmicos de domínio contínuo.
 
-\noindent \textbf{Palavras-chave:} \textit{Inteligência de enxames}, \textit{Algoritmos bioinspirados}, \textit{Problemas dinâmicos com domínio contínuo}, \textit{Particle Swarm Optimization}.
+\noindent \textbf{Palavras-chave:} \textit{Inteligência de enxames}, \textit{Algoritmos bioinspirados}, \textit{Problemas dinâmicos com domínio contínuo}, \textit{Otimização por colônia de Partículas}.
 
 \resumo{Abstract}
 
