creating the new model of the chapters

--- a/consideracoes.tex
+++ b/consideracoes.tex
@@ -1,4 +1,4 @@
-\chapter{Considerações}
+\chapter{Conclusão e Trabalhos Futuros}
 \label{ch:consideracoes}
 
 De um modo geral, a maioria das pesquisas em algoritmos evolutivos e de enxame concentram-se em problemas de otimização estáticos. No entanto, muitos problemas do mundo real são problemas de otimização dinâmica, em que as mudanças ocorrem ao longo do tempo. Isso requer algoritmos de otimização, não só para encontrar a solução ideal global sob um ambiente específico, mas também para monitorar continuamente a mudança em diferentes ambientes dinâmicos. Assim, são necessários métodos de otimização que são capazes de se adaptar continuamente.
