--- a/main.tex
+++ b/main.tex
@@ -8,9 +8,10 @@
 	\include{capa}
 	\include{introducao}
 	\include{fundamentos}
-	\include{problemas}
 	\include{relacionados}
-	\include{proposta}
+	\include{modelo}
+	\include{protocolo}
+	\include{resultados}
 	\include{consideracoes}
 	\include{bibliography}
 \end{document}
